Fixed shop layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,6 @@ html {
 }
 
 #root {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100%;
 }
